--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "marked": "^1.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-styled-components": "^1.4.14",
     "vuex": "^3.1.3"
   },
   "devDependencies": {
