--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "marked": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-awesome": "^4.0.2",
     "vue-router": "^3.1.6",
     "vue-styled-components": "^1.4.14",
     "vuex": "^3.1.3"
